using System;
using System.Collections;

public static class GameHash {

    public static string GOAL_TAG = "Goal";
	public static string FLOOR_GROUND_TAG = "FloorGround";
    public static string HERO_TAG = "Hero";
    public static string COIN_TAG = "Coin";
    public static string GAME_MANAGER_TAG = "GameManager";

    public static string MOVING_BRIDGE_G_OBJ_NAME = "MovingBridge";
    public static string MAIN_CAMERA_G_OBJ_NAME = "Main Camera";

    public static string ANIMSTATE_ANIM = "AnimState";
    public static string MOVING_ANIM = "Moving";
    public static string DIED_ANIM = "Died";
}
